nestum/tests/ui/fail_external_not_found.stderr
error: unable to locate module file for missing; expected missing.rs or missing/mod.rs under the module root
 --> tests/ui/fail_external_not_found.rs:3:1
  |
3 | #[nestum]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `nestum` (in Nightly builds, run with -Z macro-backtrace for more info)
